@@ -25,16 +25,15 @@
 #include "CartAR.hxx"
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-CartridgeAR::CartridgeAR(const uInt8* image, uInt32 size, bool fastbios)
-  : my6502(0)
+CartridgeAR::CartridgeAR(const uInt8* image, uInt32 size,
+                         const Settings& settings)
+  : my6502(0),
+    mySettings(settings)
 {
   // Create a load image buffer and copy the given image
   myLoadImages = new uInt8[size];
   myNumberOfLoadImages = size / 8448;
   memcpy(myLoadImages, image, size);
-
-  // Initialize SC BIOS ROM
-  initializeROM(fastbios);
 }
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -50,6 +49,9 @@ void CartridgeAR::reset()
   class Random random;
   for(uInt32 i = 0; i < 6 * 1024; ++i)
     myImage[i] = random.next();
+
+  // Initialize SC BIOS ROM
+  initializeROM();
 
   myPower = true;
   myPowerRomCycle = mySystem->cycles();
@@ -279,66 +281,70 @@ void CartridgeAR::bankConfiguration(uInt8 configuration)
 }
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-void CartridgeAR::initializeROM(bool fastbios)
+void CartridgeAR::initializeROM()
 {
   static uInt8 dummyROMCode[] = {
-    0xa5, 0xfa, 0x85, 0x80, 0x4c, 0x18, 0xf8, 0xff, 
-    0xff, 0xff, 0x78, 0xd8, 0xa0, 0x0, 0xa2, 0x0, 
-    0x94, 0x0, 0xe8, 0xd0, 0xfb, 0x4c, 0x50, 0xf8, 
-    0xa2, 0x0, 0xbd, 0x6, 0xf0, 0xad, 0xf8, 0xff, 
-    0xa2, 0x0, 0xad, 0x0, 0xf0, 0xea, 0xbd, 0x0, 
-    0xf7, 0xca, 0xd0, 0xf6, 0x4c, 0x50, 0xf8, 0xff, 
-    0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 
-    0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 
-    0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 
-    0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 
-    0xa2, 0x3, 0xbc, 0x1d, 0xf9, 0x94, 0xfa, 0xca, 
-    0x10, 0xf8, 0xa0, 0x0, 0xa2, 0x28, 0x94, 0x4, 
-    0xca, 0x10, 0xfb, 0xa2, 0x1c, 0x94, 0x81, 0xca, 
-    0x10, 0xfb, 0xa9, 0x0, 0x85, 0x1b, 0x85, 0x1c, 
-    0x85, 0x1d, 0x85, 0x1e, 0x85, 0x1f, 0x85, 0x19, 
-    0x85, 0x1a, 0x85, 0x8, 0x85, 0x1, 0xa9, 0x10, 
-    0x85, 0x21, 0x85, 0x2, 0xa2, 0x7, 0xca, 0xca, 
-    0xd0, 0xfd, 0xa9, 0x0, 0x85, 0x20, 0x85, 0x10, 
-    0x85, 0x11, 0x85, 0x2, 0x85, 0x2a, 0xa9, 0x5, 
-    0x85, 0xa, 0xa9, 0xff, 0x85, 0xd, 0x85, 0xe, 
-    0x85, 0xf, 0x85, 0x84, 0x85, 0x85, 0xa9, 0xf0, 
-    0x85, 0x83, 0xa9, 0x74, 0x85, 0x9, 0xa9, 0xc, 
-    0x85, 0x15, 0xa9, 0x1f, 0x85, 0x17, 0x85, 0x82, 
-    0xa9, 0x7, 0x85, 0x19, 0xa2, 0x8, 0xa0, 0x0, 
-    0x85, 0x2, 0x88, 0xd0, 0xfb, 0x85, 0x2, 0x85, 
-    0x2, 0xa9, 0x2, 0x85, 0x2, 0x85, 0x0, 0x85, 
-    0x2, 0x85, 0x2, 0x85, 0x2, 0xa9, 0x0, 0x85, 
-    0x0, 0xca, 0x10, 0xe4, 0x6, 0x83, 0x66, 0x84, 
-    0x26, 0x85, 0xa5, 0x83, 0x85, 0xd, 0xa5, 0x84, 
-    0x85, 0xe, 0xa5, 0x85, 0x85, 0xf, 0xa6, 0x82, 
-    0xca, 0x86, 0x82, 0x86, 0x17, 0xe0, 0xa, 0xd0, 
-    0xc3, 0xa9, 0x2, 0x85, 0x1, 0xa2, 0x1c, 0xa0, 
-    0x0, 0x84, 0x19, 0x84, 0x9, 0x94, 0x81, 0xca, 
-    0x10, 0xfb, 0xa6, 0x80, 0xdd, 0x0, 0xf0, 0xa5, 
-    0x80, 0x45, 0xfe, 0x45, 0xff, 0xa2, 0xff, 0xa0, 
-    0x0, 0x9a, 0x4c, 0xfa, 0x0, 0xcd, 0xf8, 0xff, 
-    0x4c
+    0xa5, 0xfa, 0x85, 0x80, 0x4c, 0x18, 0xf8, 0xff,
+    0xff, 0xff, 0x78, 0xd8, 0xa0, 0x0, 0xa2, 0x0,
+    0x94, 0x0, 0xe8, 0xd0, 0xfb, 0x4c, 0x50, 0xf8,
+    0xa2, 0x0, 0xbd, 0x6, 0xf0, 0xad, 0xf8, 0xff,
+    0xa2, 0x0, 0xad, 0x0, 0xf0, 0xea, 0xbd, 0x0,
+    0xf7, 0xca, 0xd0, 0xf6, 0x4c, 0x50, 0xf8, 0xff,
+    0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff,
+    0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff,
+    0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff,
+    0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff,
+    0xa2, 0x3, 0xbc, 0x22, 0xf9, 0x94, 0xfa, 0xca,
+    0x10, 0xf8, 0xa0, 0x0, 0xa2, 0x28, 0x94, 0x4,
+    0xca, 0x10, 0xfb, 0xa2, 0x1c, 0x94, 0x81, 0xca,
+    0x10, 0xfb, 0xa9, 0xff, 0xc9, 0x0, 0xd0, 0x3,
+    0x4c, 0x13, 0xf9, 0xa9, 0x0, 0x85, 0x1b, 0x85,
+    0x1c, 0x85, 0x1d, 0x85, 0x1e, 0x85, 0x1f, 0x85,
+    0x19, 0x85, 0x1a, 0x85, 0x8, 0x85, 0x1, 0xa9,
+    0x10, 0x85, 0x21, 0x85, 0x2, 0xa2, 0x7, 0xca,
+    0xca, 0xd0, 0xfd, 0xa9, 0x0, 0x85, 0x20, 0x85,
+    0x10, 0x85, 0x11, 0x85, 0x2, 0x85, 0x2a, 0xa9,
+    0x5, 0x85, 0xa, 0xa9, 0xff, 0x85, 0xd, 0x85,
+    0xe, 0x85, 0xf, 0x85, 0x84, 0x85, 0x85, 0xa9,
+    0xf0, 0x85, 0x83, 0xa9, 0x74, 0x85, 0x9, 0xa9,
+    0xc, 0x85, 0x15, 0xa9, 0x1f, 0x85, 0x17, 0x85,
+    0x82, 0xa9, 0x7, 0x85, 0x19, 0xa2, 0x8, 0xa0,
+    0x0, 0x85, 0x2, 0x88, 0xd0, 0xfb, 0x85, 0x2,
+    0x85, 0x2, 0xa9, 0x2, 0x85, 0x2, 0x85, 0x0,
+    0x85, 0x2, 0x85, 0x2, 0x85, 0x2, 0xa9, 0x0,
+    0x85, 0x0, 0xca, 0x10, 0xe4, 0x6, 0x83, 0x66,
+    0x84, 0x26, 0x85, 0xa5, 0x83, 0x85, 0xd, 0xa5,
+    0x84, 0x85, 0xe, 0xa5, 0x85, 0x85, 0xf, 0xa6,
+    0x82, 0xca, 0x86, 0x82, 0x86, 0x17, 0xe0, 0xa,
+    0xd0, 0xc3, 0xa9, 0x2, 0x85, 0x1, 0xa2, 0x1c,
+    0xa0, 0x0, 0x84, 0x19, 0x84, 0x9, 0x94, 0x81,
+    0xca, 0x10, 0xfb, 0xa6, 0x80, 0xdd, 0x0, 0xf0,
+    0xa9, 0x9a, 0xa2, 0xff, 0xa0, 0x0, 0x9a, 0x4c,
+    0xfa, 0x0, 0xcd, 0xf8, 0xff, 0x4c
   };
 
-  // If fastbios is enabled, set the wait time between vertical bars
-  // to 0 (default is 8), which is stored at address 189 of the bios
-  if(fastbios)
-    dummyROMCode[189] = 0x0;
+  // Note that the following offsets depend on the 'scrom.asm' file
+  // in src/emucore/misc.  If that file is ever recompiled (and its
+  // contents placed in the array above), the offsets will almost
+  // definitely change
 
-  uInt32 size = sizeof(dummyROMCode);
+  // The scrom.asm code checks a value at offset 109 as follows:
+  //   0xff -> do a complete jump over the SC BIOS progress bars code
+  //   0x0  -> show SC BIOS progress bars as normal
+  dummyROMCode[109] = mySettings.getBool("fastscbios") ? 0xff : 0x0;
+
+  // The accumulator should contain a random value after exiting the
+  // SC BIOS code - a value placed in offset 281 will be stored in A
+  class Random random;
+  dummyROMCode[281] = random.next();
 
   // Initialize ROM with illegal 6502 opcode that causes a real 6502 to jam
   for(uInt32 i = 0; i < 2048; ++i)
-  {
     myImage[3 * 2048 + i] = 0x02; 
-  }
 
   // Copy the "dummy" Supercharger BIOS code into the ROM area
-  for(uInt32 j = 0; j < size; ++j)
-  {
+  for(uInt32 j = 0; j < sizeof(dummyROMCode); ++j)
     myImage[3 * 2048 + j] = dummyROMCode[j];
-  }
 
   // Finally set 6502 vectors to point to initial load code at 0xF80A of BIOS
   myImage[3 * 2048 + 2044] = 0x0A;
