@@ -5,27 +5,37 @@
   @version $Id$
 */
 
-#include <iomanip.h>
-#include <fstream.h>
+#include <iomanip>
+#include <fstream>
+#include <iostream>
+using namespace std;
 
-main()
+int main(int ac, char* av[])
 {
-  ifstream in("scrom.bin");
-
-  cout << "    ";
-
-  for(int t = 0; ; ++t)
+  ifstream in;
+  in.open("scrom.bin");
+  if(in.is_open())
   {
-    unsigned char c;
-    in.get(c);
+    in.seekg(0, ios::end);
+    int len = (int)in.tellg();
+    in.seekg(0, ios::beg);
 
-    if(in.eof())
-      break;
+    unsigned char* data = new unsigned char[len];
+    in.read((char*)data, len);
+    in.close();
 
-    cout << "0x" << hex << (int)c << ", ";
+    cout << "    ";
 
-    if((t % 8) == 7)
-      cout << endl << "    ";
+    // Skip first two bytes; they shouldn't be used
+    for(int t = 2; t < len; ++t)
+    {
+      cout << "0x" << hex << (int)data[t];
+      if(t < len - 1)
+        cout << ", ";
+      if(((t-2) % 8) == 7)
+        cout << endl << "    ";
+    }
+    cout << endl;
+    delete[] data;
   }
-  cout << endl;
-} 
+}
