@@ -40,6 +40,10 @@
   * Tweaked paddle control so that all positions are reachable in game
     4 of Activision Casino in both NTSC and PAL versions.
 
+  * SuperCharger/AR ROMs now start with a random value in the CPU
+    accumulator.  This should fix issues with Dragonstomper always
+    starting in exactly the same state.
+
   * Auto-detection for '3F' bankswitching improved; several ROMs
     previously detected as 'F8' now work correctly.
 
@@ -52,8 +56,13 @@
     using an external frontend (in which case exiting a ROM also exits
     from Stella).
 
+  * Re-added '-fastscbios' commandline argument, and added an associated
+    UI item.  When enabled, the SuperCharger load bars are now completely
+    removed (and not just sped up as in previous releases).
+
   * The '-listrominfo' commandline argument now shows all ROM
-    information built in to the internal database.
+    information built in to the internal database, taking into account
+    any information in 'personal' stella.pro files.
 
 -Have fun!
 
